--- a/src/App.css
+++ b/src/App.css
@@ -13,15 +13,11 @@
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.App-navigation-link {
+  font-size: 34px;
+  color: crimson;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.Welcome {
+  text-align: center;
 }
