--- a/src/components/weather/WeatherBox.css
+++ b/src/components/weather/WeatherBox.css
@@ -1,7 +1,8 @@
 .Weather-container {
-  margin: "16px";
-  border: "5px black";
-  padding: "16px";
+  margin: 16px;
+  border: black;
+  border-style: solid;
+  border-width: 3px;
 }
 
 .Weather-content {
